2008-06-18  Torsten Rahn <ps_ml@gmx.de>

    * src/lib/MergedLayerDecorator.{h|cpp}:
    * src/lib/MarbleModel.cpp:

    - Only show clouds if the clouds property is defined in the dgml file.

2008-06-18  Patrick Spendrin    <ps_ml@gmx.de>

    * tools/add_kml/add_kml_tag.py

    fix renaming from KML to Kml

2008-06-18  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/XmlHandler.{h|cpp}
    * src/lib/MarbleModel.cpp
    * src/lib/CMakeLists.txt
    remove XmlHandler as now the KML geoparser takes over that part

2008-06-18  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt

    set the cmake minimum version to 2.4.8
    this might be replaced later by a workaround

2008-06-17  Simon Schmeisser  <mail_to_wrt@gmx.de>
    * FindMarble.cmake:

    added a CMake module that helps external applications
    find an installed Marble

    * CMakeLists.txt:

    install CMake module

2008-06-17  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarbleWidget.h:

    Small apidocs fixes/cleanups.

2008-06-15  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PlaceMarkManager.cpp

    remove memory leak as suggested by Jens-Michael Hoffmann

2008-06-15  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt

    fix MinGW plugins
    fix QTSCRIPT include/linker error

2008-06-15  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PlaceMarkManager.cpp

    use the new KML implementation; later we can remove the
    XMLHandler stuff

2008-06-15 Shashank Singh <shashank.personal@gmail.com>
    * src/lib/jsonparser.h
    * src/lib/jsonparser.cpp

2008-06-14 Shashank Singh <shashank.personal@gmail.com>
    * src/lib/jsonparser.h
    * src/lib/jsonparser.cpp
    * src/lib/TinyWebBrowser.h
    * src/lib/TinyWebBrowser.h

2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/tests/CMakeLists.txt

    fix linkage of QTONLY version
  
   
2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PluginManager.cpp

    make the output of the pluginmanager usable
