@@ -1,3 +1,8 @@
+2008-06-21  Inge Wallin  <inge@lysator.liu.se>
+
+	* src/lib/TextureColorizer.cpp (colorize): Follow coding standards
+	* src/lib/MarbleMap.cpp (setDownloadUrl): Follow coding standards
+
 2008-06-18  Torsten Rahn <ps_ml@gmx.de>
 
     * src/lib/MergedLayerDecorator.{h|cpp}:
